[package]
name = "qcmerger-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
comfy-table = "4.1"
console = "0.14"
globber = "0.1"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
opt-level = 's'
